@@ -94,49 +94,39 @@ public final class ZoneService implements GameEngine {
 		ZoneInstance fullMap = new ZoneInstance(mapId, new ZoneInfo(fullArea, zone));
 		fullMap.addHandler(getNewZoneHandler(zone.getName()));
 		zones.put(zone.getName(), fullMap);
-
 		Collection<ZoneInfo> areas = this.zoneByMapIdMap.get(mapId);
-		if (areas == null)
+		if (areas == null) {
 			return zones;
-
+		}
 		for (ZoneInfo area : areas) {
 			ZoneInstance instance;
 			switch (area.getZoneTemplate().getZoneType()) {
-				case FLY:
-					instance = new FlyZoneInstance(mapId, area);
-					break;
-				case NO_FLY:
-					instance = new NoFlyZoneInstance(mapId, area);
-					break;
-				case FORT:
+				case FLY -> instance = new FlyZoneInstance(mapId, area);
+				case NO_FLY -> instance = new NoFlyZoneInstance(mapId, area);
+				case FORT -> {
 					instance = new SiegeZoneInstance(mapId, area);
-					SiegeLocation siege = DataManager.SIEGE_LOCATION_DATA.getSiegeLocations().get(area.getZoneTemplate().getSiegeId().get(0));
+					SiegeLocation siege = DataManager.SIEGE_LOCATION_DATA.getSiegeLocations().get(area.getZoneTemplate().getSiegeId().getFirst());
 					if (siege != null) {
 						siege.addZone((SiegeZoneInstance) instance);
 						ShieldService.getInstance().attachShield(siege);
 					}
-					break;
-				case ARTIFACT:
+				}
+				case ARTIFACT -> {
 					instance = new SiegeZoneInstance(mapId, area);
 					for (int artifactId : area.getZoneTemplate().getSiegeId()) {
 						SiegeLocation artifact = DataManager.SIEGE_LOCATION_DATA.getArtifacts().get(artifactId);
 						if (artifact == null) {
-							log.warn("Missing siege location data for zone " + area.getZoneTemplate().getName().name());
+							log.warn("Missing siege location data for zone {}", area.getZoneTemplate().getName().name());
 						} else {
 							artifact.addZone((SiegeZoneInstance) instance);
 						}
 					}
-					break;
-				case PVP:
-					instance = new PvPZoneInstance(mapId, area);
-					break;
-				default:
+				}
+				case PVP -> instance = area.getZoneTemplate().getFlags() == 0 ? new DisablePvPZoneInstance(mapId, area) : new PvPZoneInstance(mapId, area);
+				default -> {
 					InvasionZoneInstance invasionZone = getIZI(area);
-					if (invasionZone != null) {
-						instance = invasionZone;
-					} else {
-						instance = new ZoneInstance(mapId, area);
-					}
+					instance = Objects.requireNonNullElseGet(invasionZone, () -> new ZoneInstance(mapId, area));
+				}
 			}
 			instance.addHandler(getNewZoneHandler(area.getZoneTemplate().getName()));
 			zones.put(area.getZoneTemplate().getName(), instance);
